[package]
name = "tax_ids"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Molander"]
description = "A library to validate and verify Tax Ids. Handle European, British, Norwegian or Swiss VAT numbers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mollemoll/tax-ids"
keywords = ["tax", "vat", "vies", "eu"]
categories = ["finance", "api-bindings", "localization", "parser-implementations"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
roxmltree = {  version = "0.19.0", optional = true }
chrono = "0.4.38"
serde_json = "1.0.116"
thiserror = "1.0.60"
toml = { version = "0.8.12", optional = true }

[features]
default = ["eu_vat"]
eu_vat = ["roxmltree"]
gb_vat = []
ch_vat = ["roxmltree"]
no_vat = ["toml"]

